# bcn-libraries-bulk-lookups

./: .gitignore  Pipfile  bulk_search_csv_authors.py  bulk_search_csv_books.py  create_notes_from_books_export.py  get_book_copy_info_for_single_editions.py  group_single_editions_by_library.py  pyproject.toml
bcnlibrarylookup/: export.py  http.py  model.py  parse.py
